fix overflowing content-list lede

--- a/src/sass/components/_content-list.scss
+++ b/src/sass/components/_content-list.scss
@@ -93,6 +93,7 @@
 
     .lede {
         margin-bottom: 0;
+        overflow: hidden;
     }
 
     .date {
